objects/User_Access_Review_Details__c.object
<CustomObject>
    <description>To Capture User Security Details for Audit Purpose</description>
    <fields>
        <fullName>Approval__c</fullName>
        <description>Approval Status</description>
        <inlineHelpText>Approval Status</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>De-Activate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver</description>
        <inlineHelpText>Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Access_Review_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_Business__c</fullName>
        <description>Value used for annual user access review process to define who will approve the user. Will be a direct copy from the Approving Business field on the SFDC Access Request record.</description>
        <label>Approving Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Process__c</fullName>
        <description>Audit Process</description>
        <inlineHelpText>Audit Process</inlineHelpText>
        <label>Audit Process</label>
        <referenceTo>User_Access_Review__c</referenceTo>
        <relationshipName>User_Information_Audit_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>CompanyName</description>
        <inlineHelpText>CompanyName</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>May contain description of SFAR</description>
        <inlineHelpText>Description of Activity</inlineHelpText>
        <label>Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <description>Org</description>
        <inlineHelpText>Org</inlineHelpText>
        <label>Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-DuPont</fullName>
                </value>
                <value>
                    <fullName>DuPont Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Program</description>
        <inlineHelpText>Program</inlineHelpText>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Review Date</description>
        <inlineHelpText>Review Date</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Access_Type__c</fullName>
        <description>User Access Type</description>
        <inlineHelpText>User Access Type</inlineHelpText>
        <label>Access Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>User Country</description>
        <inlineHelpText>User Country</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email_Id__c</fullName>
        <description>Email Id</description>
        <inlineHelpText>Email Id</inlineHelpText>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Grouping__c</fullName>
        <description>User Grouping</description>
        <label>Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>User ID in system</description>
        <inlineHelpText>User Id in system</inlineHelpText>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Login__c</fullName>
        <description>Last login date and time of user under review</description>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Owning_Org__c</fullName>
        <description>User Owning Org</description>
        <inlineHelpText>User Owning Org</inlineHelpText>
        <label>Owning Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Owning_SBU_Org__c</fullName>
        <description>User Owning SBU Org</description>
        <inlineHelpText>User Owning SBU Org</inlineHelpText>
        <label>Owning SBU Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Permission_Sets__c</fullName>
        <description>User Permission Sets</description>
        <inlineHelpText>User Permission Sets</inlineHelpText>
        <label>Permission Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <description>User Profile</description>
        <inlineHelpText>User Profile</inlineHelpText>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Public_Group__c</fullName>
        <description>User Public Group</description>
        <inlineHelpText>User Public Group</inlineHelpText>
        <label>Public Group</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <description>User Geographical Region</description>
        <inlineHelpText>User Geographical Region</inlineHelpText>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Roles__c</fullName>
        <description>User Roles</description>
        <inlineHelpText>User Roles</inlineHelpText>
        <label>Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>User Type</description>
        <inlineHelpText>User Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont Employee</fullName>
                </value>
                <value>
                    <fullName>Non-Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ePass_Id__c</fullName>
        <description>ePass Id</description>
        <inlineHelpText>ePass Id</inlineHelpText>
        <label>ePass Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>User Access Review Details</label>
    <nameField>
        <label>User Information Audit Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Access Review Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>